# matrixloader_cpp

./: CMakeLists.txt  COPYRIGHT.txt  README.md
.github/: ISSUE_TEMPLATE.md
include/: libmatrixloader.h  matrixloader_adapter.h  matrixloader_builder.h  matrixloader_parser.h
include/matrixloader_ext/adapters/: armadillo.h  pressio.h
include/matrixloader_ext/builders/: armadillo.h  pressio.h
include/matrixloader_ext/parsers/: csv.h
include/matrixloader_ext/utils/: dense.h
src/: matrixloader_config.h.in
test/: CMakeLists.txt  armadillo.cc  builder_tests.cc  example.cc  mocks.h  parser_tests.cc  pressio.cc
